--- a/Informes/PG1_Informe.qmd
+++ b/Informes/PG1_Informe.qmd
@@ -107,7 +107,7 @@ Informe prolijo:first_16, after first_15, 2d
 
 Nuestros datos se basarán en dos bases de datos:
 
--   Programming language database (PLDV):
+-   Programming language database (PLDB):
     -   Contiene información acerca de 4000 lenguajes de programación incluyendo su año de creación, el tipo (query, programación, etiquetado, etc), cantidad de usuarios, cantidad de trabajadores, entre otros.
 -   Survey_results (StackOverflow):
     -   Contiene información de una encuesta realizada a desarrolladores de todo el mundo relacionados a la experiencia de programación. Incluyen demografía, educación, puesto de trabajo, lenguaje de programación, satisfacción laboral, entre otros.
@@ -116,7 +116,7 @@ Nuestros datos se basarán en dos bases de datos:
 library(readr)
 
 languages = read_csv("https://pldb.com/pldb.csv")
-encuesta = read_csv("../db/survey_results_public.csv")
+encuesta = read_csv("../db/upload_survey_results.csv")
 ```
 
 ### Variables de estudio iniciales
@@ -126,7 +126,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 #### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                        | Restricciones                   |
-|-----------------|-----------------|----------------------|-----------------|
+|-----------------|-----------------|---------------------|-----------------|
 | MainBranch            | Categórica nominal | Contiene información sobre el estado profesional del desarrollador | \-                              |
 | Employment            | Categórica nominal | El tipo de empleo que tiene le desarrollador                       | separado por punto y coma       |
 | RemoteWork            | Categórica nominal | De que forma ejercen el trabajo remoto                             | \-                              |
@@ -147,7 +147,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 #### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
-|-----------------|-----------------|---------------------|-----------------|
+|-----------------|-----------------|--------------------|-----------------|
 | Title                 | Categórica Nominal | Nombre original del lenguaje de programación                      | \-                              |
 | Appeared              | Numérica discreta  | Año en donde apareció por primera vez el lenguaje de programación | \>= 1945                        |
 | Rank                  | Numérica discreta  | Un ranking hecho por PLDB                                         | \>=0                            |
