--- a/Informes/Oficial_PG1_Informe.Rmd
+++ b/Informes/Oficial_PG1_Informe.Rmd
@@ -13,30 +13,17 @@ output:
 
 Hablar del mundo de la programación es adentrarse en un universo inmenso, lleno de posibilidades y retos. Sin embargo, si nuestro objetivo es adentrarnos en este mundo, debemos tomar en cuenta nuestra salud por encima de todo.
 
-### Tema Delimitado:
+### Relevancia e importancia
 
--   Estudio sobre la relación del lenguaje de programación que usan los desarrolladores en su trabajo y su salud mental
+Actualmente se ve una preferencia enorme por las empresas en usar las nuevas tecnologías, por lo que si queremos enfocarnos en este rubro será de mucha utilidad saber cómo es que influye el lenguaje de programación que usan con la calidad de vida que tienen los desarrolladores.
 
-### Pregunta de investigación:
+### Planificación y Factibilidad
 
-¿Cómo influye el lenguaje programación que se usa al trabajar en la salud mental de un programador?
+Consideramos que el proyecto es viable ya que usamos bases de datos de fuentes confiables como Stackoverflow (la cual es una plataforma abierta y la base de datos resume información pública) y la otra de PLDB (un proyecto opensource creado por desarrolladores para la recolección de datos sobre lenguajes de programación)
 
--   Variable dependiente: Salud Mental
--   Variable independiente: Lenguajes de programación que se usan al trabajar
+#### Planificación (Diagrama de Gantt)
 
-### Hipótesis:
-
-"A mayor popularidad del lenguaje de programación que utilice el desarrollador, tendrá una mejor salud mental en su vida diaria"
-
-### Relevancia y factibilidad del tema:
-
-**Relevancia:** - Actualmente se ve una preferencia enorme por las empresas en usar las nuevas tecnologías, por lo que si queremos enfocarnos en este rubro será de mucha utilidad saber cómo es que influye el lenguaje de programación que usan con la calidad de vida que tienen los desarrolladores.
-
-**Factibilidad:** - Consideramos que el proyecto es viable ya que usamos bases de datos de fuentes confiables como Stackoverflow (la cual es una plataforma abierta y la base de datos resume información pública) y la otra de PLDB (un proyecto opensource creado por desarrolladores para la recolección de datos sobre lenguajes de programación)
-
-------------------------------------------------------------------------
-
-## Planificación
+Para entender el desarrollo del estudio hasta el momento, se muestra el siguiente **Diagrama de Gantt** con la planificación de las diferentes actividades y entregas del proyecto.
 
 ```{r warning=FALSE, echo=FALSE}
 
@@ -80,35 +67,26 @@ Correcciones:first_13, 2023-05-26, 3d
 Union de PG0x:first_14, after first_13, 2d
 Verificar ortografía:first_15, after first_14, 2d
 Informe prolijo:first_16, after first_15, 2d
-
-
-
 ")
-
-
 ```
-
-------------------------------------------------------------------------
 
 ## Objetivos
 
-### Objetivo principal:
+### Objetivo principal
 
-1.  Demostrar que la salud mental del programador depende, en parte, del lenguaje de programación que escojas para trabajar.
+Demostrar que la salud mental del programador depende, en parte, del lenguaje de programación que escojas para trabajar.
 
-### Objetivos secundarios:
+### Objetivos secundarios
 
-2.  Demostrar que la popularidad de un lenguaje de programación no significa que trabajar con este brinde mayor satisfacción laboral.
+-   Demostrar que la popularidad de un lenguaje de programación no significa que trabajar con este brinde mayor satisfacción laboral.
 
-3.  Encontrar una relación entre el acceso a información del lenguaje de programación escogido por el programador y su salud mental.
+-   Encontrar una relación entre el acceso a información del lenguaje de programación escogido por el programador y su salud mental.
 
-4.  Encontrar una relación entre el salario que brinda el lenguaje de programación que usan los desarrolladores con su salud mental.
-
-------------------------------------------------------------------------
+-   Encontrar una relación entre el salario que brinda el lenguaje de programación que usan los desarrolladores con su salud mental.
 
 ## Datos
 
-### Procesos de recolección de datos:
+### Recolección de datos
 
 Nuestros datos se basarán en dos bases de datos:
 
@@ -117,18 +95,19 @@ Nuestros datos se basarán en dos bases de datos:
 -   Survey_results (StackOverflow):
     -   Contiene información de una encuesta realizada a desarrolladores de todo el mundo relacionados a la experiencia de programación. Incluyen demografía, educación, puesto de trabajo, lenguaje de programación, satisfacción laboral, entre otros.
 
-```{r warning=FALSE}
-library(readr)
+## Población, muestra y muestreo
 
-languages = read_csv("https://pldb.com/pldb.csv")
-encuesta = read_csv("../db/upload_survey_results.csv")
-```
+### Población
 
-### Variables de estudio iniciales
+### Muestra
+
+### Muestreo
+
+## Variables de estudio iniciales
 
 En resumen, en esta sección se registran todas las variables utilizadas a partir de las dos bases de datos debidamente prolijas, con el objetivo de comprender adecuadamente el procesamiento de la información. En un principio, hay un total de `variables` variables.
 
-#### Encuestas de Stakoverflow
+### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                        | Restricciones                   |
 |------------------|------------------|-------------------|------------------|
@@ -149,7 +128,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 | OpSysPersonal use     | Categórica Nominal | Sistema operativo que usan para ellos mismos                       | separada por punto y coma       |
 | LanguagesHaveWorkWith | Categótica Nominal | Lista de los lenguajes que han usado                               | separada por punto y coma       |
 
-#### PLDB Lenguajes de Programación
+### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
 |------------------|------------------|-------------------|------------------|
@@ -162,3 +141,36 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 | Country               | Categórica Nominal | País de creación del lenguaje                                     | \-                              |
 | githubLanguage_repos  | Numérica discreta  | Cantidad de repositorios que existen en github con ese lenguaje   | \>1 (que sea entero)            |
 | githubBigQuery_repos  | Numérica discreta  | Cantidad de repositorios que existen en BigQuery de Github        | \>1 (que sea entero)            |
+
+## Librerías
+
+### Carga de librerías
+
+### Carga de datos
+
+```{r warning=FALSE}
+library(readr)
+
+languages = read_csv("https://pldb.com/pldb.csv")
+encuesta = read_csv("../db/upload_survey_results.csv")
+```
+
+## Limpieza de Datos
+
+### Encuestas de Stakoverflow
+
+### PLDB Lenguajes de Programación
+
+## Variables de estudio Finales
+
+## Preguntas e Hipótesis
+
+## Análisis Descriptivo
+
+### Análisis univariado
+
+### Análisis bivariado
+
+### Análisis multivariado
+
+### Conclusiones Parciales
