--- a/Informes/Oficial_PG1_Informe.Rmd
+++ b/Informes/Oficial_PG1_Informe.Rmd
@@ -112,7 +112,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                        | Restricciones                   |
-|-----------------------|--------------------|--------------------------------------------------------------------|---------------------------------|
+|-----------------|-----------------|--------------------|-----------------|
 | MainBranch            | Categórica nominal | Contiene información sobre el estado profesional del desarrollador | \-                              |
 | Employment            | Categórica nominal | El tipo de empleo que tiene le desarrollador                       | separado por punto y coma       |
 | RemoteWork            | Categórica nominal | De que forma ejercen el trabajo remoto                             | \-                              |
@@ -133,7 +133,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
-|-----------------------|--------------------|-------------------------------------------------------------------|---------------------------------|
+|-----------------|-----------------|--------------------|-----------------|
 | Title                 | Categórica Nominal | Nombre original del lenguaje de programación                      | \-                              |
 | Appeared              | Numérica discreta  | Año en donde apareció por primera vez el lenguaje de programación | \>= 1945                        |
 | Rank                  | Numérica discreta  | Un ranking hecho por PLDB                                         | \>=0                            |
@@ -158,6 +158,334 @@ encuesta = read_csv("../db/upload_survey_results.csv")
 ```
 
 ## Limpieza de Datos
+
+### Limpieza de "Programming Languages Data Base"
+
+Se procederá a limpiar la base de datos `Programming_languages.csv`.
+
+Primero, se verifica que las librerías estén instaladas:
+
+```{r}
+library(readr)
+library(dplyr)
+```
+
+Luego, se importa la base de datos con la librería `readr`, asignando a una variable llamada `DF`.
+
+```{r, warning=FALSE}
+dataframe <- read_csv("../db/Programming_languages.csv")
+```
+
+Veamos cuántas filas y columnas tiene nuestro `dataframe`:
+
+```{r}
+nrow(dataframe)
+ncol(dataframe)
+```
+
+Como se puede ver, hay muchas columnas (en total 353) que no utilizaremos.
+
+Por ello, procedemos a limpiar nuestro `dataframe`, centrándonos en las variables que nos interesan, las cuales son: `Title`, `Appeared`, `Type`, `Rank`, `numberOfJobs`, `numberOfUsers`, `Country`, `githubLanguage.repos` y `githubBigQuery.repos`.
+
+Vamos a eliminar las columnas que no necesitemos:
+
+```{r}
+# Columnas a conservar
+dataframe <- select(dataframe, title, appeared, type, rank, numberOfJobs, numberOfUsers, country, githubLanguage.repos, githubBigQuery.repos)
+
+```
+
+El resultado de este proceso sería:
+
+```{r}
+names(dataframe)
+```
+
+Renombraremos las variables para una mejor manipulación
+
+```{r}
+dataframe %>% rename(Nombre = title,
+                     Año = appeared,
+                     Tipo = type,
+                     Rank = rank,
+                     N_Trabajos = numberOfJobs,
+                     N_Usuarios = numberOfUsers,
+                     País = country,
+                     Github_repos = githubLanguage.repos,
+                     BigQuery_repos = githubBigQuery.repos) -> dataframe
+```
+
+#### Nombre
+
+La variable `Nombre` ya se encuentra limpia, verifiquemos que esté completa para todas las filas:
+
+```{r}
+any(is.na(dataframe$Nombre))
+```
+
+Efectivamente está completa.
+
+#### Año
+
+Consideraremos los lenguajes de programación que hayan sido creados posteriores e iguales al año 1945:
+
+```{r}
+dataframe$Año[dataframe$Año < 1945] <- NA
+
+#dataframe <- dataframe[!is.na(dataframe$Año), ]
+```
+
+#### Tipo
+
+Queremos que la variable `Tipo` corresponda a lenguajes de programación `pl` o `queryLanguage`, Por lo que se eliminan todos los registros que no sean `pl` (programming languages) o `queryLanguage` (Lenguaje de consulta)
+
+```{r}
+dataframe <- dataframe[dataframe$Tipo == "pl" | dataframe$Tipo == "queryLanguage" | dataframe$Tipo == "textMarkup" | dataframe$Tipo == "stylesheetLanguage" ,]
+```
+
+#### Rank
+
+Como el ranking de esta variable empieza en 0, vamos a sumar 1 a cada fila de esta variable:
+
+```{r}
+dataframe$Rank <- dataframe$Rank + 1
+```
+
+#### N_Trabajos
+
+Queremos que el lenguaje de programación tenga al menos 1 trabajador:
+
+```{r}
+dataframe$N_Trabajos[dataframe$N_Trabajos == 0] <- NA
+```
+
+#### N_Usuarios
+
+Queremos que el lenguaje de programación tenga más de 10 usuarios:
+
+```{r}
+dataframe <- dataframe[dataframe$N_Usuarios > 10,] 
+```
+
+#### País
+
+Esta variable ya está limpia.
+
+#### Github_repos
+
+Queremos que exista al menos un repositorio al buscar en Github
+
+```{r}
+dataframe$Github_repos[dataframe$Github_repos == 0] <- NA
+```
+
+#### BigQuery_repos
+
+Queremos que exista al menos un repositorio al buscar en BigQuery
+
+```{r}
+dataframe$BigQuery_repos[dataframe$BigQuery_repos == 0] <- NA
+```
+
+Usaremos algunos lenguajes de programación, para que coincida con los usados por los usuarios de Stackoverflow
+
+```{r}
+language <- c('APL', 'Assembly', 'Bash', 'C', 'C#', 'C++', 'Clojure', 'COBOL', 'Crystal', 'Dart', 'Delphi', 'Elixir', 'Erlang', 'F#', 'Fortran', 'Go', 'Groovy', 'Haskell', 'HTML','CSS', 'Java', 'JavaScript', 'Julia', 'Kotlin', 'LISP', 'Lua', 'MATLAB', 'OCaml', 'Objective-C', 'Perl', 'PHP', 'PowerShell', 'Python', 'R', 'Ruby', 'Rust', 'SAS', 'Scala', 'Solidity', 'SQL', 'Swift', 'TypeScript', 'VBA')
+```
+
+```{r}
+df <- data.frame()
+
+agregar_fila <- function(fila) {
+  df <- rbind(df, fila)
+}
+
+for (i in 1:nrow(dataframe)){
+  if (dataframe$Nombre[i] %in% language){
+    fila <- subset(dataframe, Nombre == dataframe$Nombre[i])
+    df <- rbind(df, fila)
+  }
+}
+
+```
+
+### Limpieza de "survey results"
+
+-   Encuestas de Stack Overflow (33880 registros obtenidos de 73268)
+
+```{r warning=FALSE, echo=FALSE}
+library(readr)
+library(dplyr)
+
+#Leer la base de datos
+encuesta = read_csv("../db/upload_survey_results.csv")
+
+```
+
+#### Revisar que la base de datos esté limpia:
+
+Revisaremos cuantos casos completos hay
+
+```{r}
+
+#complete cases
+table(complete.cases(encuesta))
+```
+
+Observamos que parece que ninguna observación esta completa. HORROR! Sin embargo mejor enfoquémonos en las variables que queremos analizar y revisemos de nuevo.
+
+```{r}
+
+#borrar las filas que no queremos
+encuesta = select(encuesta, MainBranch, Employment, RemoteWork, CodingActivities, DevType, Country, EdLevel, Currency, ConvertedCompYearly, MentalHealth, Ethnicity, Gender, Age, `OpSysPersonal use`, `OpSysProfessional use`, LanguageHaveWorkedWith)
+
+```
+
+Ahora si, revisemos de nuevo cuantos casos completos tenemos.
+
+```{r}
+#casos completos
+table(complete.cases(encuesta))
+```
+
+Tal parece que solo 34672 casos están completos, por lo que seleccionaremos justo estos.
+
+```{r}
+#eliminar nulos
+encuesta = na.omit(encuesta)
+```
+
+#### Revisar valores de las columnas
+
+Para esta primera instancia analizaremos primero las variables numéricas, de esta forma podemos eliminar lo que creemos que se aleja de la realidad, como salarios extremadamente bajos que solo entorpecen el análisis.
+
+```{r}
+#minimo unos 3600 dolares anuales
+encuesta = encuesta[encuesta$ConvertedCompYearly > 3600,]
+```
+
+Filtrar por los géneros. En la encuesta se permite elegir géneros de varios tipos. Sin embargo, para fines de estudio nos limitaremos a hombre o mujeres, más obviaremos a los no binarios, entre otros.
+
+```{r}
+encuesta = encuesta[encuesta$Gender == "Man" | encuesta$Gender == "Woman",]
+
+table(encuesta$Gender)
+```
+
+Con respecto a las edades, eliminaremos a los que no prefirieron responder.
+
+```{r}
+encuesta = encuesta[encuesta$Age != "Prefer not to say",]
+```
+
+Con respecto a la parte de la encuesta donde se definen los estados de salud mental, eliminaremos las que son escritas ya que son muy dificiles de analizar y no representan una gran parte de la muestra.
+
+```{r}
+library(stringr)
+
+#si tiene la palabra: "in your own words" eliminarla,
+#ya que no es una respuesta válida
+encuesta = encuesta[!str_detect(encuesta$MentalHealth, "in your own words"),]
+
+#si tiene la palabra: "Prefer not to say" eliminarla,
+#ya que no es una respuesta válida
+
+encuesta = encuesta[!str_detect(encuesta$MentalHealth, "Prefer not to say"),]
+
+
+```
+
+Listo, eso es todo lo que querremos filtrar en la base de datos.
+
+#### Crear columnas para lenguajes de programación
+
+Ahora crearemos columnas para cada lenguaje de programación, esto con el fin de poder hacer un análisis más sencillo.
+
+```{r}
+library(tidyverse)
+library(stringr)
+
+
+# Separar los lenguajes y crear columnas separadas
+language <- encuesta %>%
+  separate_rows(LanguageHaveWorkedWith, sep = ";") %>%
+  group_by(LanguageHaveWorkedWith) %>%
+  summarize() %>%
+  pull()
+
+for (name in language) {
+  encuesta[name] = FALSE
+}
+
+for (i in 1:nrow(encuesta)) {
+  for (elem in unlist(strsplit(encuesta$LanguageHaveWorkedWith[i],";"))){
+    encuesta[i, elem] <- TRUE
+  }
+}
+
+
+
+```
+
+#### Crear columnas para los problemas mentales
+
+Ahora crearemos columnas para cada problema mental, esto con el fin de poder hacer un análisis más sencillo.
+
+```{r}
+
+# op1
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "concentration", "\\b"))
+encuesta$Memoria <- columna_booleana
+
+# op2
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "mood", "\\b"))
+encuesta$Emotional <- columna_booleana
+
+# op3
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "anxiety", "\\b"))
+encuesta$Anxiety <- columna_booleana
+
+# op4
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "autism", "\\b"))
+encuesta$Autism <- columna_booleana
+
+# op5
+columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "learning", "\\b"))
+encuesta$Learning <- columna_booleana
+```
+
+#### Crear columnas para sistemas operativos
+
+```{r}
+encuesta$BSD <- logical(nrow(encuesta))
+encuesta$Linux_Based <- logical(nrow(encuesta))
+encuesta$Windows <- logical(nrow(encuesta))
+encuesta$Windows_for_Linux <- logical(nrow(encuesta))
+encuesta$Mac <- logical(nrow(encuesta))
+
+opciones_a_verificar <- c("BSD", "Linux-based", "Windows", "Windows Subsystem for Linux (WSL)",
+                         "macOS")
+
+# op1
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "BSD", "\\b"))
+encuesta$BSD <- columna_booleana
+
+# op2
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "based", "\\b"))
+encuesta$Linux_Based <- columna_booleana
+
+# op3
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "Windows", "\\b"))
+encuesta$Windows <- columna_booleana
+
+# op4
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "Subsystem", "\\b"))
+encuesta$Windows_for_Linux <- columna_booleana
+
+# op5
+columna_booleana <- str_detect(encuesta$`OpSysPersonal use`, paste0("\\b", "macOS", "\\b"))
+encuesta$Mac <- columna_booleana
+```
 
 ### Encuestas de Stakoverflow
 
