--- a/Entrega 3/SurveyResults3.qmd
+++ b/Entrega 3/SurveyResults3.qmd
@@ -7,7 +7,7 @@ library(readr)
 library(dplyr)
 
 #Leer la base de datos
-encuesta = read_csv("../db/survey_results_public.csv")
+encuesta = read_csv("../db/upload_survey_results.csv")
 
 ```
 
@@ -56,9 +56,7 @@ encuesta = encuesta[encuesta$ConvertedCompYearly > 3600,]
 BOXPLOT
 
 ```{r}
-boxplot(encuesta$ConvertedCompYearly,
-        horizontal = TRUE
-        )
+summary(encuesta$ConvertedCompYearly)
 ```
 
 Filtrar por los géneros. En la encuesta se permite elegir géneros de varios tipos. Sin embargo, para fines de estudio nos limitaremos a hombre o mujeres, más obviaremos a los no binarios, entre otros.
