--- a/Entrega 3/Pruebas_graficas.qmd
+++ b/Entrega 3/Pruebas_graficas.qmd
@@ -12,6 +12,34 @@ Limpiando la variable Salario
 summary(encuesta$ConvertedCompYearly)
 ```
 
+Arreglar Salario
+
+```{r}
+encuesta <- encuesta[encuesta$ConvertedCompYearly < 400000, ]
+```
+
+```{r}
+boxplot(encuesta$ConvertedCompYearly,
+        horizontal = TRUE)
+```
+
+```{r}
+q1 <- quantile(encuesta$ConvertedCompYearly, 0.25, type = 3, na.rm = TRUE)
+q3 <- quantile(encuesta$ConvertedCompYearly, 0.75, type = 3, na.rm = TRUE)
+
+ric <- q3 - q1
+ric
+```
+
+```{r}
+IQR(encuesta$ConvertedCompYearly)
+```
+
+```{r}
+q3 + 1.5 * ric
+table(encuesta$ConvertedCompYearly > q3 + 1.5 * ric)
+```
+
 ```{r}
 encuesta %>%
  filter(!(Employment %in% "Employed, full-time")) %>%
@@ -28,9 +56,52 @@ encuesta %>%
   theme_minimal()
 ```
 
+Gráfiquita
+
+```{r}
+library(ggplot2)
+library(dplyr)
+library(readr)
+
+promedios <- c()
+
+
+#iterar por cada lenguaje de programación
+for (current in language){
+this <- encuesta[encuesta[current] == TRUE,]
+promedio <- mean(this$ConvertedCompYearly[language == current])
+promedios[current] <- promedio
+}
+
+
+#ordenar promedios de mayor a menor
+promedios <- sort(promedios, decreasing = TRUE)
+
+promedios <- data.frame(promedios)
+
+promedios
+
+porcentajeshelper <- promedios$promedios[1:15]
+nombres <- rownames(promedios)[1:15]
+
+barplot(porcentajeshelper, 
+	main="Promedio", 
+	xlab="Porcentaje de personas", 
+  #degradado lineal de azul oscuro a azul
+  col=colorRampPalette(c("darkblue", "blue"))(15),
+	horiz=TRUE,
+	las=1,
+	#nombres
+	names.arg=nombres,
+	cex.names=0.5,
+	cex.axis=0.5,
+
+	)
+```
+
 ```{r}
 encuesta %>%
- filter(ConvertedCompYearly >= 3611L & ConvertedCompYearly <= 758445L) %>%
+ filter(ConvertedCompYearly >= 3611 & ConvertedCompYearly <= 758445) %>%
  ggplot() +
   aes(x = ConvertedCompYearly, y = Memoria) +
   geom_boxplot(fill = "#FFD6D6") +
@@ -62,6 +133,10 @@ encuesta %>%
   aes(x = ConvertedCompYearly, y = Autism) +
   geom_boxplot(fill = "#FFD6F8") +
   theme_minimal()
+```
+
+```{r}
+table(encuesta$Autism)
 ```
 
 ```{r}
