--- a/Informes/Oficial_PG1_Informe.Rmd
+++ b/Informes/Oficial_PG1_Informe.Rmd
@@ -78,7 +78,7 @@ Demostrar que la salud mental del programador depende, en parte, del lenguaje de
 
 ### Objetivos secundarios
 
--   Demostrar que la popularidad de un lenguaje de programación no significa que trabajar con este brinde mayor satisfacción laboral.
+-   Demostrar que la popularidad de un lenguaje de programación no significa que trabajar con este brinde un mejor estado de salud mental.
 
 -   Encontrar una relación entre el acceso a información del lenguaje de programación escogido por el programador y su salud mental.
 
@@ -112,7 +112,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### Encuestas de Stakoverflow
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                        | Restricciones                   |
-|------------------|------------------|--------------------|------------------|
+|------------------|------------------|-------------------|------------------|
 | MainBranch            | Categórica nominal | Contiene información sobre el estado profesional del desarrollador | \-                              |
 | Employment            | Categórica nominal | El tipo de empleo que tiene le desarrollador                       | separado por punto y coma       |
 | RemoteWork            | Categórica nominal | De que forma ejercen el trabajo remoto                             | \-                              |
@@ -133,7 +133,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
-|------------------|------------------|--------------------|------------------|
+|------------------|------------------|-------------------|------------------|
 | Title                 | Categórica Nominal | Nombre original del lenguaje de programación                      | \-                              |
 | Appeared              | Numérica discreta  | Año en donde apareció por primera vez el lenguaje de programación | \>= 1945                        |
 | Rank                  | Numérica discreta  | Un ranking hecho por PLDB                                         | \>=0                            |
@@ -950,5 +950,45 @@ Resulta evidente la repetición de ciertos lenguajes en todos los tipos de probl
 Podemos pensar entonces que el lenguaje de programación si afecta de cierta forma al estado mental de una persona ya sea por su complejidad, falta de información u otros factores. La relación se hace presente puesto que podemos separar a lenguajes "**problemáticos" (que producen mayor cantidad de problemas mentales)** de lenguajes **"poco problemáticos" (que producen una cantidad baja de problemas mentales)**.
 
 Prontamente observaremos las causas por las que estos lenguajes son más "problemáticos".
+
+### ¿Hay alguna relación entre la popularidad de un lenguaje de programación y la satisfacción laboral de los programadores que lo utilizan?
+
+Para esto analizaremos los datos de los lenguajes de programación. Veremos entonces la lista de lenguajes más populares y compararemos.
+
+```{r}
+languages %>% arrange(desc(N_Usuarios)) -> OrdenUsuarios
+select(OrdenUsuarios, Nombre, N_Usuarios) %>% arrange(Nombre)
+
+barplot(OrdenUsuarios$N_Usuarios, 
+        names.arg = OrdenUsuarios$Nombre,
+        col = "pink",
+        main = "Cantidad de usuarios por Lenguaje",
+        xlab = "Lenguajes de programación",
+        ylab = "N° usuarios",
+        cex.names = 0.6,
+        cex.axis = 0.7,
+        ylim = c(0,8000000),
+        las = 2
+        )
+
+```
+
+Entonces busquemos nuestros lenguajes más "problemáticos" y los "poco problemáticos" en base a su popularidad.
+
+Rápidamente notaremos que son los lenguajes "poco problemáticos" (Java, C++, MATLAB) los que gozan de los primeros puestos en cuanto a popularidad se trata, por otro lado a los que calificamos como "problemáticos" se encuentran en puestos bajos (SAS, Lua, Erlang, Crystal).
+
+Pero parémonos a analizar un momento y pensemos, ¿es la popularidad lo que está definiendo que un lenguaje sea "problemático", es decir, afecte negativamente en la salud mental de un desarrollador? O por otro lado, ¿es un lenguaje popular porque puede ser calificado como **"poco problemático"**?
+
+Aún no podemos sacar conclusiones sobre si existe una relación clara entre la popularidad del lenguaje y su efecto en la salud mental, faltarían analizar otros factores que veremos ahora mismo.
+
+### ¿Existe una relación entre el acceso a información relevante sobre un lenguaje de programación y la salud mental de los programadores que lo utilizan?
+
+El acceso a la información, o la cantidad de documentación que existe sobre cierto lenguaje podría influir significativamente en la popularidad y la salud mental de un programador.
+
+Analizaremos el siguiente gráfico:
+
+```{r}
+
+```
 
 ### Conclusiones Parciales
